// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBarComponent should be active for the active link 1`] = `
<div
  id="root1"
>
  <div
    class="flexItem"
  >
     Song Database

  </div>
  <div
    class="flexItem"
  >
    <ul
      class="nav-pills nav"
      ngbnav=""
      role="tablist"
    >
      <li
        class="nav-item"
        label="View Songs"
        link="/"
        navigationitem=""
        ngbnavitem=""
        role="presentation"
      >
        <button
          aria-disabled="false"
          aria-label="Navigate to View Songs"
          aria-selected="false"
          class="nav-link"
          ngbnavlink=""
          role="tab"
          type="button"
        >
           View Songs

        </button>
      </li>
      <li
        class="nav-item"
        label="Add Song"
        link="/addSong"
        navigationitem=""
        ngbnavitem=""
        role="presentation"
      >
        <button
          aria-controls="ngb-nav-3-panel"
          aria-disabled="false"
          aria-label="Navigate to Add Song"
          aria-selected="true"
          class="nav-link active"
          ngbnavlink=""
          role="tab"
          type="button"
        >
           Add Song

        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`NavigationBarComponent should default active to nothing 1`] = `
<div
  id="root0"
>
  <div
    class="flexItem"
  >
     Song Database

  </div>
  <div
    class="flexItem"
  >
    <ul
      class="nav-pills nav"
      ngbnav=""
      role="tablist"
    >
      <li
        class="nav-item"
        label="View Songs"
        link="/"
        navigationitem=""
        ngbnavitem=""
        role="presentation"
      >
        <button
          aria-disabled="false"
          aria-label="Navigate to View Songs"
          aria-selected="false"
          class="nav-link"
          ngbnavlink=""
          role="tab"
          type="button"
        >
           View Songs

        </button>
      </li>
      <li
        class="nav-item"
        label="Add Song"
        link="/addSong"
        navigationitem=""
        ngbnavitem=""
        role="presentation"
      >
        <button
          aria-disabled="false"
          aria-label="Navigate to Add Song"
          aria-selected="false"
          class="nav-link"
          ngbnavlink=""
          role="tab"
          type="button"
        >
           Add Song

        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`NavigationBarComponent should use the last clicked link 1`] = `
<div
  id="root2"
>
  <div
    class="flexItem"
  >
     Song Database

  </div>
  <div
    class="flexItem"
  >
    <ul
      class="nav-pills nav"
      ngbnav=""
      role="tablist"
    >
      <li
        class="nav-item"
        label="View Songs"
        link="/"
        navigationitem=""
        ngbnavitem=""
        role="presentation"
      >
        <button
          aria-controls="ngb-nav-4-panel"
          aria-disabled="false"
          aria-label="Navigate to View Songs"
          aria-selected="true"
          class="nav-link active"
          ngbnavlink=""
          role="tab"
          type="button"
        >
           View Songs

        </button>
      </li>
      <li
        class="nav-item"
        label="Add Song"
        link="/addSong"
        navigationitem=""
        ngbnavitem=""
        role="presentation"
      >
        <button
          aria-disabled="false"
          aria-label="Navigate to Add Song"
          aria-selected="false"
          class="nav-link"
          ngbnavlink=""
          role="tab"
          type="button"
        >
           Add Song

        </button>
      </li>
    </ul>
  </div>
</div>
`;
